update codeowners for brh

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -49,3 +49,6 @@ data.bloodpac.org @Mikisha10 @uc-cdis/planx-qa @urvi-occ @divyaocc
 healdata.org @hughestr @uc-cdis/planx-qa
 preprod.healdata.org @hughestr @uc-cdis/planx-qa
 externaldata.healdata.org @hughestr @uc-cdis/planx-qa
+
+brh.data-commons.org @briennal @uc-cdis/planx-qa
+brhstaging.data-commons.org @briennal @uc-cdis/planx-qa
