--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,8 +12,8 @@ flu.diseasedatahub.org @trevars @uc-cdis/planx-qa
 diseasedatahub.org @trevars @uc-cdis/planx-qa
 dcf-interop.kidsfirstdrc.org @trevars @uc-cdis/planx-qa
 
-tbi.datacommons.io @trevars @jingh8 @uc-cdis/planx-qa
-gen3-neuro.datacommons.io @trevars @jingh8 @uc-cdis/planx-qa
+tbi.datacommons.io @trevars @uc-cdis/planx-qa
+gen3-neuro.datacommons.io @trevars @uc-cdis/planx-qa
 
 va-testing.data-commons.org @nmetokishlubsky @uc-cdis/planx-qa
 va.data-commons.org @nmetokishlubsky @uc-cdis/planx-qa
