update codeowners for brh (#5319)
* update codeowners for brh

* remove Jing

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -12,8 +12,8 @@ flu.diseasedatahub.org @trevars @uc-cdis/planx-qa
 diseasedatahub.org @trevars @uc-cdis/planx-qa
 dcf-interop.kidsfirstdrc.org @trevars @uc-cdis/planx-qa
 
-tbi.datacommons.io @trevars @jingh8 @uc-cdis/planx-qa
-gen3-neuro.datacommons.io @trevars @jingh8 @uc-cdis/planx-qa
+tbi.datacommons.io @trevars @uc-cdis/planx-qa
+gen3-neuro.datacommons.io @trevars @uc-cdis/planx-qa
 
 va-testing.data-commons.org @nmetokishlubsky @uc-cdis/planx-qa
 va.data-commons.org @nmetokishlubsky @uc-cdis/planx-qa
@@ -49,3 +49,6 @@ data.bloodpac.org @Mikisha10 @uc-cdis/planx-qa @urvi-occ @divyaocc
 healdata.org @hughestr @uc-cdis/planx-qa
 preprod.healdata.org @hughestr @uc-cdis/planx-qa
 externaldata.healdata.org @hughestr @uc-cdis/planx-qa
+
+brh.data-commons.org @briennal @uc-cdis/planx-qa
+brhstaging.data-commons.org @briennal @uc-cdis/planx-qa
