--- a/preprod.healdata.org/metadata/aggregate_config.json
+++ b/preprod.healdata.org/metadata/aggregate_config.json
@@ -17,6 +17,9 @@
             "appl_id": {
                 "type": "string"
             },
+            "_hdp_uid": {
+                "type": "string"
+            },
             "tags": {
                 "type": "array"
             },
@@ -89,7 +92,7 @@
         "settings": {
             "cache_drs": true
         }
-    },  
+    },
     "adapter_commons": {
         "SAMHDA": {
             "mds_url": "https://preprod.healdata.org/",
@@ -100,11 +103,8 @@
                 "filters": "gen3_discovery.data_resource=SAMHDA"
             },
             "field_mappings": {
-                "authz": "path:authz",
-                "tags": "path:tags",
-                "study_description_summary": "path:study_description_summary",
                 "manifest": "path:__manifest",
-                "project_title": "path:project_title",
+                "_hdp_uid": "path:project_number",
                 "commons_url": "https://preprod.healdata.org"
             }
         },
@@ -119,7 +119,6 @@
             },
             "keep_original_fields": true,
             "field_mappings": {
-                "authz": "path:authz",
                 "tags": {
                     "path": "tags",
                     "default": []
@@ -131,9 +130,6 @@
                 "advSearchFilters": {
                     "path": "advSearchFilters"
                 },
-                "study_description_summary": "path:study_description_summary",
-                "manifest": "path:__manifest",
-                "project_title": "path:project_title",
                 "commons_url": "https://preprod.healdata.org"
             },
             "per_item_values": {
@@ -192,8 +188,8 @@
             "commons_name": "JCOIN",
             "keep_original_fields": true,
             "field_mappings": {
-                "short_name": "path:name",
-                "_unique_id": "path:study_id",
+                "_unique_id": "path:project_number",
+                "_hdp_uid": "path:project_number",
                 "__manifest": "path:__manifest"
             }
         },
@@ -203,7 +199,17 @@
             "adapter": "icpsr",
             "keep_original_fields": false,
             "filters": {
-                "study_ids": [4256, 30122, 34945, 35197, 37887, 37833, 37842, 37841, 35197]
+                "study_ids": [
+                    4256,
+                    30122,
+                    34945,
+                    35197,
+                    37887,
+                    37833,
+                    37842,
+                    37841,
+                    35197
+                ]
             },
             "field_mappings": {
                 "tags": [],
@@ -211,26 +217,32 @@
                 "sites": "",
                 "summary": {
                     "path": "description",
-                    "filters": ["strip_html"]
+                    "filters": [
+                        "strip_html"
+                    ]
                 },
                 "study_description_summary": {
                     "path": "description",
-                    "filters": ["strip_html"]
-                }, 
+                    "filters": [
+                        "strip_html"
+                    ]
+                },
                 "study_url": {
                     "path": "ipcsr_study_id",
-                    "filters": ["add_icpsr_source_url"]
+                    "filters": [
+                        "add_icpsr_source_url"
+                    ]
                 },
                 "location": "path:coverage[0]",
                 "subjects": "",
                 "__manifest": "",
                 "study_name": "",
                 "study_type": "",
-		"study_name_title": "",
+                "study_name_title": "",
                 "institutions": "path:contributor",
                 "year_awarded": "",
                 "investigators": "path:creator",
-		"investigators_name": "path:creator",
+                "investigators_name": "path:creator",
                 "project_title": "path:title",
                 "protocol_name": "",
                 "study_summary": "",
@@ -240,6 +252,7 @@
                 "dataset_4_type": "",
                 "dataset_5_type": "",
                 "project_number": "path:identifier",
+                "_hdp_uid": "path:identifier",
                 "dataset_1_title": "",
                 "dataset_2_title": "",
                 "dataset_3_title": "",
@@ -263,13 +276,15 @@
             },
             "per_item_values": {
                 "10.3886/ICPSR30122.v5": {
-                    "__manifest": [{
-                        "md5sum": "7cf87ce47b91e3a766753222bc22d098",
-                        "file_name": "TEDS-D-2018-DS0001-bndl-data-spss.zip",
-                        "file_size": 69297783,
-                        "object_id": "dg.H35L/208f4c52-771e-409a-b810-4bcba3c03c51",
-                        "commons_url": "externaldata.healdata.org"
-                    }],
+                    "__manifest": [
+                        {
+                            "md5sum": "7cf87ce47b91e3a766753222bc22d098",
+                            "file_name": "TEDS-D-2018-DS0001-bndl-data-spss.zip",
+                            "file_size": 69297783,
+                            "object_id": "dg.H35L/208f4c52-771e-409a-b810-4bcba3c03c51",
+                            "commons_url": "externaldata.healdata.org"
+                        }
+                    ],
                     "data_availability": "available",
                     "authz": "/programs/open",
                     "source_url": "https://www.icpsr.umich.edu/web/ICPSR/studies/30122",
@@ -301,19 +316,22 @@
                     "source_url": "https://www.icpsr.umich.edu/web/ICPSR/studies/35197"
                 },
                 "10.3886/ICPSR34945.v3": {
-                    "__manifest": [{
-                        "md5sum": "f8334864a8e2ca52d64272a73d8a9021",
-                        "file_name": "N-MHSS-2019-DS0001-bndl-data-tsv.zip",
-                        "file_size": 288889,
-                        "object_id": "dg.H35L/c6f5f04e-70e8-46ed-bf62-902e51d8d9b9",
-                        "commons_url": "externaldata.healdata.org"
-                    }],
+                    "__manifest": [
+                        {
+                            "md5sum": "f8334864a8e2ca52d64272a73d8a9021",
+                            "file_name": "N-MHSS-2019-DS0001-bndl-data-tsv.zip",
+                            "file_size": 288889,
+                            "object_id": "dg.H35L/c6f5f04e-70e8-46ed-bf62-902e51d8d9b9",
+                            "commons_url": "externaldata.healdata.org"
+                        }
+                    ],
                     "data_availability": "available",
                     "authz": "/programs/open",
                     "dataset_1_title": "N-MHSS-2019-DS0001-bndl-data-tsv.zip"
                 },
                 "10.3886/ICPSR04256.v5": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "eac267906a463fdca35e2cbf12bdb2fd",
                             "file_name": "N-SSATS-2017-DS0001-bndl-data-spss.zip",
                             "file_size": 501181,
@@ -411,21 +429,23 @@
                 "authz": "/programs/open",
                 "sites": "",
                 "summary": "path:BriefSummary",
-		"study_description_summary": "path:BriefSummary",
+                "study_description_summary": "path:BriefSummary",
                 "study_url": {
                     "path": "NCTId",
-                    "filters": ["add_clinical_trials_source_url"]
+                    "filters": [
+                        "add_clinical_trials_source_url"
+                    ]
                 },
                 "location": "",
                 "subjects": "path:EnrollmentCount",
                 "__manifest": "",
                 "study_name": "",
-		"study_name_title": "",
+                "study_name_title": "",
                 "study_type": "",
                 "institutions": "path:LeadSponsorName",
                 "year_awarded": "",
                 "investigators": "path:OverallOfficial[0].OverallOfficialName",
-		"investigators_name": "path:OverallOfficial[0].OverallOfficialName",
+                "investigators_name": "path:OverallOfficial[0].OverallOfficialName",
                 "project_title": "path:BriefTitle",
                 "protocol_name": "",
                 "study_summary": "",
@@ -435,6 +455,7 @@
                 "dataset_4_type": "",
                 "dataset_5_type": "",
                 "project_number": "path:OrgStudyId",
+                "_hdp_uid": "path:OrgStudyId",
                 "dataset_1_title": "",
                 "dataset_2_title": "",
                 "dataset_3_title": "",
@@ -583,7 +604,6 @@
                     "source_url": "https://clinicaltrials.gov/ct2/show/NCT04135703?titles=Prevention+of+OUD%3A+The+HOME+Project+%28Housing%2C+Opportunities%2C+Motivation+and+Engagement%29&draw=2&rank=1"
                 }
             }
-
         },
         "PDAPS": {
             "mds_url": "https://api.monqcle.com/",
@@ -616,31 +636,41 @@
                 "sites": "",
                 "summary": {
                     "path": "description",
-                    "filters": ["strip_html"]
+                    "filters": [
+                        "strip_html"
+                    ]
                 },
                 "study_description_summary": {
                     "path": "description",
-                    "filters": ["strip_html"]
+                    "filters": [
+                        "strip_html"
+                    ]
                 },
                 "location": "United States",
                 "subjects": "",
                 "__manifest": "",
                 "study_name": "",
-		"study_name_title": "",
+                "study_name_title": "",
                 "study_type": "",
                 "institutions": "Center for Public Health Law Research at the Temple University Beasley School of Law",
                 "year_awarded": "",
                 "investigators": "",
-		"investigators_name": "",
+                "investigators_name": "",
                 "project_title": "path:title",
                 "protocol_name": "",
-                "study_summary": { "path": "description", "filters": ["strip_html"] },
+                "study_summary": {
+                    "path": "description",
+                    "filters": [
+                        "strip_html"
+                    ]
+                },
                 "dataset_1_type": "",
                 "dataset_2_type": "",
                 "dataset_3_type": "",
                 "dataset_4_type": "",
                 "dataset_5_type": "",
                 "project_number": "path:id",
+                "_hdp_uid": "path:id",
                 "dataset_1_title": "",
                 "dataset_2_title": "",
                 "dataset_3_title": "",
@@ -664,7 +694,8 @@
             },
             "per_item_values": {
                 "57b45d83d6c9e7e8693ccdfb": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "43a9ac4c3bd4e38aede09f7d74b8d1a3",
                             "file_size": 210648,
                             "file_name": "20200911-naloxone-codebook.pdf",
@@ -706,7 +737,8 @@
                     "dataset_2_title": "naloxone-data-09112020.xlsx"
                 },
                 "582e24f1f7d1b67268334875": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "8ab1a01b9e4f6c7a896dc5ae765cff5e",
                             "file_size": 535337,
                             "file_name": "20170216-recreational-marijuana-protocol.pdf",
@@ -748,7 +780,8 @@
                     "dataset_1_title": "20170404-rm-codebook.pdf"
                 },
                 "596d0183d6c9e7476257c867": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "95262d889e1c64d918df0e14fae96bd4",
                             "file_size": 72067,
                             "file_name": "20180626-pain-clincs-reports.pdf",
@@ -790,7 +823,8 @@
                     "dataset_3_title": "20180626-pain-clinics-protocol.pdf"
                 },
                 "599321e2d6c9e7937a85fbdf": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "5121f954bcc21c8981ee526e46f5e065",
                             "file_size": 280932,
                             "file_name": "20210720-good-samaritan-codebook.pdf",
@@ -832,7 +866,8 @@
                     "dataset_2_title": "good-samaritan-overdose-prevention-laws-7-21-2021.xlsx"
                 },
                 "59c1525995679f19228b456d": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "4a8a7ef83986149fd9a8c48233520be0",
                             "file_size": 401817,
                             "file_name": "20161202-mat-report.pdf",
@@ -883,7 +918,8 @@
                     "dataset_3_title": "cphlr-policy-brief-mat-regulation-in-the-united-states.pdf"
                 },
                 "59cab35df5f53cbd118b4568": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "fff27a4617b8670ce5b86951bb12dd96",
                             "file_size": 13191,
                             "file_name": "20170925-opg-stat-data-v-1.xlsx",
@@ -925,7 +961,8 @@
                     "dataset_3_title": "20170926-opioid-prescribing-guidelines-protocol.pdf"
                 },
                 "5a297e22f5f53c4b258b4568": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "389ff16d8a8489e60cbcc816aa6e1c7b",
                             "file_size": 400337,
                             "file_name": "20171206-direct-dispensing-codebook.pdf",
@@ -976,7 +1013,8 @@
                     "dataset_3_title": "direct-dispensing-wp.pdf"
                 },
                 "5d44337d914abe53578b4568": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "e5f6cf3496eb6373886f160101f15eb5",
                             "file_size": 137697,
                             "file_name": "20210701-icsud-report.pdf",
@@ -1018,7 +1056,8 @@
                     "dataset_2_title": "involuntary-commitment-for-substance-use-laws-data.xlsx"
                 },
                 "5d694a99f5f53c76538b456c": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "7f6448d41bd155527d4db2f0973e2a0a",
                             "file_size": 5717,
                             "file_name": "20190830medicaid-coverage-of-mat.csv",
@@ -1060,7 +1099,8 @@
                     "dataset_3_title": "medicaid-mat-protocol.pdf"
                 },
                 "5d694d4cf5f53cf0538b4569": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "783173b84e036687c00c43295e581f5b",
                             "file_size": 111278,
                             "file_name": "20190830incarceration-codebook.pdf",
@@ -1102,7 +1142,8 @@
                     "dataset_3_title": "incarceration-effects-on-medicaid-protocol--final.pdf"
                 },
                 "5d69a093914abeb8238b456d": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "fbbc6e8bc9d03986897b9cafd4e82fad",
                             "file_size": 82686,
                             "file_name": "08302019-mat-in-correctional-facilities-codebook.pdf",
@@ -1144,7 +1185,8 @@
                     "dataset_2_title": "08302019-mat-in-correctional-facilities.xlsx"
                 },
                 "5e568e8ff5f53cb45f8b456c": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "60e7f38e44343291dfe59c3c3be5288e",
                             "file_size": 314852,
                             "file_name": "codebook.pdf",
@@ -1186,7 +1228,8 @@
                     "dataset_4_title": "summary-report.pdf"
                 },
                 "5e597441f5f53c9a178b456c": {
-                    "__manifest": [{
+                    "__manifest": [
+                        {
                             "md5sum": "31a4c72fe0d0aef224e635cbf6a4937a",
                             "file_size": 704260,
                             "file_name": "codebook.pdf",
@@ -1355,7 +1398,7 @@
                     "dataset_2_title": "buprenorphine-and-methadone-during-covid-19-data-020222.xlsx",
                     "dataset_4_title": "buprenorphine-and-methadone-during-covid-19-report-02102022.pdf",
                     "dataset_3_title": "buprenorphine-and-methadone-during-covid-19-research-protocol-02072022.pdf"
-		}
+                }
             }
         }
     }
