--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -43,8 +43,8 @@ accessclinicaldata.niaid.nih.gov @hughestr @uc-cdis/planx-qa
 
 gen3.datacommons.io @trevars @cgmeyer @uc-cdis/planx-qa
 
-portal.occ-data.org @Mikisha10 @uc-cdis/planx-qa @urvi-occ @divyaocc
-data.bloodpac.org @Mikisha10 @uc-cdis/planx-qa @urvi-occ @divyaocc
+portal.occ-data.org @Mikisha10 @uc-cdis/planx-qa @urvi-occ
+data.bloodpac.org @Mikisha10 @uc-cdis/planx-qa @urvi-occ
 
 healdata.org @hughestr @uc-cdis/planx-qa
 preprod.healdata.org @hughestr @uc-cdis/planx-qa
