--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,8 +10,8 @@ flu.diseasedatahub.org @trevars @uc-cdis/planx-qa
 diseasedatahub.org @trevars @uc-cdis/planx-qa
 dcf-interop.kidsfirstdrc.org @trevars @uc-cdis/planx-qa
 
-nci-crdc-staging.datacommons.io @trevars @uc-cdis/planx-qa
-nci-crdc.datacommons.io @trevars @uc-cdis/planx-qa
+nci-crdc-staging.datacommons.io @frankliuao @uc-cdis/planx-qa
+nci-crdc.datacommons.io @frankliuao @uc-cdis/planx-qa
 
 tbi.datacommons.io @trevars @uc-cdis/planx-qa
 gen3-neuro.datacommons.io @trevars @uc-cdis/planx-qa
