--- a/flu.diseasedatahub.org/etlMapping.yaml
+++ b/flu.diseasedatahub.org/etlMapping.yaml
@@ -129,6 +129,7 @@ mappings:
       - name: weight_percentage
       - name: tint
       - name: days_to_follow_up
+      - name: project_id
   - name: flu_file
     doc_type: file
     type: collector
