--- a/aids.diseasedatahub.org/manifest.json
+++ b/aids.diseasedatahub.org/manifest.json
@@ -4,22 +4,22 @@
     "That's all I have to say"
   ],
   "versions": {
-    "arborist": "quay.io/cdis/arborist:2.4.0",
-    "fence": "quay.io/cdis/fence:4.15.0",
-    "indexd": "quay.io/cdis/indexd:2.6.2",
+    "arborist": "quay.io/cdis/arborist:2022.11",
+    "fence": "quay.io/cdis/fence:2022.11",
+    "indexd": "quay.io/cdis/indexd:2022.11",
     "aws-es-proxy": "quay.io/cdis/aws-es-proxy:0.8",
-    "peregrine": "quay.io/cdis/peregrine:1.2.1",
-    "pidgin": "quay.io/cdis/pidgin:1.1.0",
-    "revproxy": "quay.io/cdis/nginx:1.17.6-ctds-1.0.1",
-    "sheepdog": "quay.io/cdis/sheepdog:1.1.12",
-    "portal": "quay.io/cdis/data-portal:2.24.1",
+    "peregrine": "quay.io/cdis/peregrine:2022.11",
+    "pidgin": "quay.io/cdis/pidgin:2022.11",
+    "revproxy": "quay.io/cdis/nginx:2022.11",
+    "sheepdog": "quay.io/cdis/sheepdog:2022.11",
+    "portal": "quay.io/cdis/data-portal:2022.11",
     "fluentd": "fluent/fluentd-kubernetes-daemonset:v1.2-debian-cloudwatch",
     "jupyterhub": "quay.io/occ_data/jupyterhub:master",
-    "spark": "quay.io/cdis/gen3-spark:1.0.0",
-    "wts": "quay.io/cdis/workspace-token-service:0.1.0",
-    "manifestservice": "quay.io/cdis/manifestservice:0.1.1",
-    "tube": "quay.io/cdis/tube:0.3.16",
-    "guppy": "quay.io/cdis/guppy:0.3.7"
+    "spark": "quay.io/cdis/gen3-spark:2022.11",
+    "wts": "quay.io/cdis/workspace-token-service:2022.11",
+    "manifestservice": "quay.io/cdis/manifestservice:2022.11",
+    "tube": "quay.io/cdis/tube:2022.11",
+    "guppy": "quay.io/cdis/guppy:2022.11"
   },
   "arborist": {
     "deployment_version": "2"
@@ -47,7 +47,9 @@
     "workspace_url": "https://diseasedatahub.org/lw-workspace",
     "manifest_service_url": "https://diseasedatahub.org/manifests",
     "wts_url": "https://diseasedatahub.org/wts/oauth2/",
-    "origins_allow_credentials": ["https://diseasedatahub.org"],
+    "origins_allow_credentials": [
+      "https://diseasedatahub.org"
+    ],
     "netpolicy": "off",
     "cookie_domain": "diseasedatahub.org",
     "des_namespace": "default"
