--- a/caninedc.org/etlMapping.yaml
+++ b/caninedc.org/etlMapping.yaml
@@ -64,8 +64,7 @@ mappings:
             src: data_type
             fn: set
           - name: file_id
-            alternate_src: _file_id
-            src: file_id
+            src: _file_id
             fn: set
   - name: canine_file
     doc_type: file
