--- a/brhstaging.data-commons.org/manifest.json
+++ b/brhstaging.data-commons.org/manifest.json
@@ -17,7 +17,7 @@
     "indexd": "quay.io/cdis/indexd:2022.11",
     "kayako-wrapper": "quay.io/cdis/kayako-wrapper-service:0.1.1",
     "manifestservice": "quay.io/cdis/manifestservice:2022.11",
-    "metadata": "quay.io/cdis/metadata-service:2022.11",
+    "metadata": "707767160287.dkr.ecr.us-east-1.amazonaws.com/gen3/metadata-service:2.1.0",
     "peregrine": "quay.io/cdis/peregrine:2022.11",
     "pidgin": "quay.io/cdis/pidgin:2022.11",
     "portal": "quay.io/cdis/data-portal:2022.11",
